Add combineLists to Utils and test